# ETL

./: .gitignore  anotaçoes.md  etl.py  pyproject.toml
